# nc

./: .stan.toml  CHANGELOG.md  CLAUDE.md  cabal.project.local  fourmolu.yaml  nc.cabal  text-icu-windows.txt
old/Language/NC/Internal/: Lex.hs
old/Language/NC/Internal/Parse/: Op.hs-boot  Type.hs  Type.hs-boot
oldsrc/Language/: NC.hs
oldsrc/Language/NC/: Lex2.hs  Parse.hs  Prelude.hs
oldsrc/Language/NC/Experiment/: Types.hs
oldsrc/Language/NC/Internal/: Prelude.hs
oldsrc/Language/NC/Parse/: Decl.bak.hs
ref/src/: nc.cabal
ref/src/Language/NC/: Prim.hs  Type.hs
ref/src/NC/: Parser.hs  Parser.hs-boot
ref/src/NC/Parse/: Type.hs
ref/src/NC/Symbol/: Def.hs
rsch/: c_syntax_ai_friendly.txt  cstvsast.md  fragment1.txt  fragment1_claude.txt  n3088 annex a syntax summary.txt  n3088_decl.txt  n3088_stat.txt  newtrans.txt  pfir1-2.hs  pfir1.hs  pprexper1.c
src/Language/: NC.hs
src/Language/NC/: CTypes.hs  Dec.hs  Error.hs  Expr.hs  ExprStmt.hs  Lex.hs  Lex2.hs  Parse.hs  ParseDec.hs  ParseSyn.hs  ParseUtil.hs  Prelude.hs  Prim.hs  Syn.hs  THLex.hs  Type.hs
src/Language/NC/Experiment/: PrimTypes.hs  Types.hs
src/Language/NC/Internal/: Error.hs  Lex.hs  Lex.hs-boot  Parse.hs  Parse.hs-boot  Prelude.hs  PrimTypes.hs  SBS.hs  Symbol.hs
src/Language/NC/Internal/Lex/: Decl.hs  Lex.hs  Op.hs  Op.hs-boot  Type.hs  Type.hs-boot
src/Language/NC/Internal/Parse/: Decl.hs  Op.hs  Op.hs-boot  Stmt.hs  Type.hs
src/Language/NC/Internal/Types/: Parse.hs  PrimTypes.hs
src/Language/NC/Parse/: Decl.hs  Expr.hs  Expr.hs-boot  Frag1.hs  PrimTypes.hs
src/NC/: Lex.hs  Parser.hs  Symbol.hs  Type.hs
src/NC/Internal/: Debug1.hs  Prelude1.hs
src/NC/Parser/: Decl.hs  Decl.hs-boot  Def.hs  Def.hs-boot  Expr.hs  Expr.hs-boot  Lex.hs
src/NC/Type/: Def.hs  Def.hs-boot  Prim.hs
test/: Main.hs
