cabal-version:      3.14
name:               nc
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             axionbuster
maintainer:         axionbuster@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

common lang
    default-extensions:     BlockArguments, ViewPatterns, LambdaCase,
                            TypeFamilies, UndecidableInstances,
                            TemplateHaskell, OrPatterns, MagicHash,
                            ExtendedLiterals, PatternSynonyms,
                            OverloadedRecordDot, MultiWayIf, RecordWildCards,
                            DerivingStrategies, DerivingVia,
                            MultilineStrings
    default-language:       GHC2024

common optim
    -- ghc-options:            -O2 -fllvm

library
    import:             warnings, lang, optim
    exposed-modules:    Language.NC.Prim, NC.Parser
    default-extensions: NoImplicitPrelude
    build-depends:      base, flatparse, containers, unordered-containers,
                        hashable, data-fix,
                        bytestring, text, parser-combinators,
                        template-haskell, hashtables, unliftio, primitive,
                        lens, text-icu
    hs-source-dirs:     src
