cabal-version:      3.14
name:               nc
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             axionbuster
maintainer:         axionbuster@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

common lang
    default-extensions:     BlockArguments, ViewPatterns, LambdaCase,
                            TypeFamilies, UndecidableInstances,
                            TemplateHaskell, OrPatterns, MagicHash,
                            ExtendedLiterals, PatternSynonyms,
                            OverloadedRecordDot, MultiWayIf, RecordWildCards,
                            DerivingStrategies, DerivingVia,
                            MultilineStrings, StrictData
    default-language:       GHC2024

common optim
    -- ghc-options:            -O2 -fllvm

common emit-hie
    ghc-options:            -fwrite-ide-info
                            -hiedir=.hie

library
    import:             warnings, lang, optim, emit-hie
    exposed-modules:    NC.Type, NC.Type.Def, NC.Type.Prim,
                        NC.Parser, NC.Parser.Def, NC.Parser.Lex,
                        NC.Parser.Decl, NC.Parser.Expr
    other-modules:      NC.Internal.Prelude1, NC.Internal.Debug1
    default-extensions: NoImplicitPrelude
    build-depends:      base, flatparse, containers, unordered-containers,
                        hashable, data-fix,
                        bytestring, text, parser-combinators,
                        template-haskell, hashtables, unliftio, primitive,
                        lens, text-icu
    hs-source-dirs:     src
